2017-08-06  Andrew Pinski  <apinski@cavium.com>

	* gcc.target/aarch64/_Float16_1.c: Skip if supplied a -mcpu= option.
	* gcc.target/aarch64/_Float16_2.c: Likewise.
	* gcc.target/aarch64/_Float16_3.c: Likewise.

2017-08-06  Tom de Vries  <tom@codesourcery.com>

	* gcc.dg/pr78582.c: Require effective target nonlocal_goto.

2017-08-06  Tom de Vries  <tom@codesourcery.com>

	* gcc.c-torture/execute/builtins/memops-asm-lib.c (my_memmove):  Fix return
	type.  Add missing return.

2017-08-06  Tom de Vries  <tom@codesourcery.com>

	PR testsuite/81731
	* gcc.dg/torture/pr78218.c (struct v): New type, factored type out of
	variable 'a' definition.
	(b): Remove unused variable.
	(gp): New variable.
	(check): Add parameter corresponding to call in main, and handle.

2017-08-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/79790
	* g++.dg/cpp1z/class-deduction43.C: New.

2017-08-04  Yury Gribov  <tetra2005@gmail.com>

	PR tree-optimization/57371
	* c-c++-common/pr57371-1.c: New test.
	* c-c++-common/pr57371-2.c: New test.
	* c-c++-common/pr57371-3.c: New test.
	* c-c++-common/pr57371-4.c: New test.
	* gcc.dg/pr57371-5.c: New test.

2017-08-04  Carl Love  <cel@us.ibm.com>

	* gcc.target/powerpc/builtins-3.c: Remove ISA 3.0 word variant
	builtin test cases for vec_mule, and vec_mulo.
	* gcc.target/powerpc/builtins-3-p8.c: Add ISA 3.0 word variant
	builtin test cases for vec_mule, and vec_mulo.

2017-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/81590
	* gcc.target/i386/avx512-check.h: New file.
	* gcc.target/i386/avx5124fmaps-check.h: Removed.
	* gcc.target/i386/avx5124vnniw-check.h: Likewise.
	* gcc.target/i386/avx512cd-check.h: Likewise.
	* gcc.target/i386/avx512ifma-check.h: Likewise.
	* gcc.target/i386/avx512vbmi-check.h: Likewise.
	* gcc.target/i386/avx512vpopcntdq-check.h: Likewise.
	* gcc.target/i386/avx512bw-check.h: Rewrite.
	* gcc.target/i386/avx512dq-check.h: Likewise.
	* gcc.target/i386/avx512er-check.h: Likewise.